--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   align-items: center;
 }
 
-#title {
+.title {
   background-image: linear-gradient(270deg, #eceff1, #87d8ca);
   -webkit-background-clip: text;
   color: transparent;
